--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
   "name": "mineflayer-bot",
   "version": "1.0.0",
-  "description": "A Minecraft bot using mineflayer with logging and auto-auth features.",
+  "description": "A Minecraft bot using Mineflayer and Express",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "mineflayer": "^4.0.0",
-    "log4js": "^6.6.1"
-  },
-  "engines": {
-    "node": ">=14.0.0"
+    "express": "^4.18.2",
+    "log4js": "^6.9.1",
+    "mineflayer": "^4.6.1"
   }
 }
